<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/employeeRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/employee_row_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/employee_margin_start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/organ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/between_text_margin"
                android:fontFamily="@font/nanum_square_round_eb"
                android:text="@string/organ"
                android:textColor="@color/light"
                android:textSize="@dimen/position_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/between_text_margin"
                android:fontFamily="@font/nanum_square_round_eb"
                android:text="@string/between"
                android:textColor="@color/light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/nanum_square_round_eb"
                android:text="@string/position"
                android:textColor="@color/light"
                android:textSize="@dimen/position_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/employee_margin_start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/between_text_margin"
                android:fontFamily="@font/nanum_square_round_eb"
                android:text="@string/name"
                android:textColor="@color/bold"
                android:textSize="@dimen/name_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/between_text_margin"
                android:fontFamily="@font/nanum_square_round_eb"
                android:text="@string/between"
                android:textColor="@color/bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/nanum_square_round_eb"
                android:text="@string/number"
                android:textColor="@color/bold"
                android:textSize="@dimen/name_font_size" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/button_margin_end"
        android:background="@android:color/transparent"
        android:src="@drawable/btn_call_custom"
        app:borderWidth="0dp"
        app:fabCustomSize="@dimen/fab_size"
        app:maxImageSize="@dimen/fab_text_size_three"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/employeeRow"
        android:background="@color/line"
        tools:ignore="ContentDescription" />

</RelativeLayout>


